# KaStat

./: KaFlow  KaFlow-new  KaSim  KaSim-new  README.md
models/: abc-pert-new.ka  abc-pert.ka  egfr.ka
src/: CMakeLists.txt  KaStat_sq.cpp  comparestories.cpp  comparestories.hpp  readdot.cpp  readdot.hpp  readjson.cpp  readjson.hpp
